
_____________________________________________________________________________________________________


                                       CFDWARP CHANGELOG

_____________________________________________________________________________________________________


2023 MAR 07a
  * in model/fluid/_*_plasma/fluid.c
    - renamed kappamem by kappanmem
  * in model/thermo/_thermo.h
    - deleted _cpk_from_T(long spec, double T)
  * in model/transport/_Dixon-Lewis/transport.c
    - in _kappak_from_T(), now calls _cpk_from_T_equilibrium() instead of _cpk_from_T()
  * in src/common.h
    - in npwk_t, added kappanmem
  * in model/thermo/_generic/
    - added enthalpy_sai.c (temporary file which is used to isolate a bug)
    

2023 MAR 02a
  * in src/post.c
    - in read_post_actions(), uncommented the code below (not yet tested sufficiently)
      (this fixes memory allocation issues when calling Xstation in the Post() module
      

2023 FEB 24a
  * in tools/chemkin2cfdwarp.c
    - some improvements
    

2023 FEB 22a
  * in model/chem/_C2H4_Air_Plasma_36s/chem.c
    - added the CHEMMODEL_TEST1 option
  * in model/chem/_C2H4_Air_Plasma_36s/
    - added test1.c and test1.h which were obtained from thermal_ignition_test1.chemkin given
      by Adamovich


2023 FEB 21a
  * in model/chem/_C2H4_Air_Plasma_36s/adamovich2023c.c
    - fixed bugs in 1r1p reactions
  * in model/chem/_C2H4_Air_Plasma_36s/adamovich2023d.c
    - updated all reactions using latest chemkin2cfdwarp program
  * in model/share/emfield_share.c
    - in _E_dot_J(), now calls find_E(np[l],gl,E); instead of find_E_smoothed(np, gl, l, E);
      --> find_E_smoothed() lead to sanitizer complaining when using MPI
  * in tools/chemkin2cfdwarp.c
    - fixed a bug related to calA and reactions with 1 or 3 reactants
    

2023 FEB 16b
  * in model/chem/_C2H4_Air_Plasma_36s/chem.c
    - added CHEMMODEL_ADAMOVICH2023C
  * in model/fluid/_Navier-Stokes_plasma/fluid.c