@@ -158,6 +158,13 @@ Grid(
 );
 
 
+Block(
+  Fluid();
+  
+  EMField();
+
+);
+
 Bdry(
   NavierStokesPlasma(
     {
@@ -184,9 +191,10 @@ Bdry(
     _________________________________________________________________________________________
     }
     All(BDRY_WALLTFIXED1,Twall,gamma);
-    Faces(BDRY_INFLOWSUPERSONIC,BDRY_OUTFLOWSUPERSONIC1,  BDRY_WALLTFIXED1,BDRY_WALLTFIXED1);
     Plane("j",js,BDRY_WALLTFIXED1,Twall,gamma);
     Plane("j",je,BDRY_WALLTFIXED1,Twall,gamma);
+    Plane("i",is,BDRY_INFLOWSUPERSONIC);
+    Plane("i",ie,BDRY_OUTFLOWSUPERSONIC1);
     if (THERMIONICEMISSION,
       Region(is1,js,is2,js,BDRY_WALLTFIXEDTHERMIONIC1,Twall,workfunct);
       Region(is1,je,is2,je,BDRY_WALLTFIXEDTHERMIONIC1,Twall,workfunct);
@@ -252,6 +260,7 @@ Model(
     AddHeatPoint(0.0{x,m},0.0{y,m}, 0.1{radius,m}, 0.0{W/m});
     }
     HEAT_DEPOSITED_TO_ELECTRONS=FALSE;
+    QENSOURCETERMS=TRUE;
   );
   AirPlasma11s(
     CHEMMODEL=CHEMMODEL_PARENT2023;
